# nikami-bworlds

./: .gitattributes  .gitignore  CODEX_RESTART_HANDOFF.md  README.md  package-lock.json  package.json
catalog/: actor-animation-policy.json  adventure-actor-catalog.json  adventure-actor-curated-targets.json  adventure-actor-retained-stops.json  bethesda-openmw-capabilities.json  cell-catalog.schema.json  flat-world-proof-starts.json  fnv-actor-parity-sidecar.schema.json  fnv-actor-parity-sidecar.sunny-smiles.example.json  fnv-bite-ledger.schema.json  fnv-clean-transplant-plan.json  fnv-facegen-recovery.json  fnv-flat-acceptance-ledger.json  fnv-full-runtime-crawl-contract.json  fnv-goodsprings-actor-roster.json  fnv-goodsprings-interaction-census.json  fnv-goodsprings-retail-matrix.json  fnv-live-defect-ledger.json  fnv-local-engine-slices.json  fnv-paired-proof-manifest.schema.json  fnv-parity-control-plane.json  fnv-parity-denominators.json  fnv-parity-exclusions.json  fnv-renderer-boundary-manifest.json  fnv-retail-checkpoint.schema.json  fnv-retail-openmw-checkpoint-pair.schema.json  fnv-retail-openmw-visual-pair.schema.json  fnv-save-backed-recovery-plan.json  fnv-save330-achr-acre-implementation-matrix.json  fnv-save330-change-form-matrix.json  fnv-save330-clean-capture-inputs.json  fnv-save330-global-data-matrix.json  fnv-ui-data-driven-contract.json  (+18 more)
oracles/sfse/nikami_starfield_oracle/: CMakeLists.txt  README.md  exports.def
oracles/sfse/nikami_starfield_oracle/src/: main.cpp
tools/fnv-esplugin-audit/: Cargo.toml
tools/fnv-esplugin-audit/src/: main.rs
(+294 files in other folders)
