[package]
name = "fnv-esplugin-audit"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
esplugin = { git = "https://github.com/Ortham/esplugin.git", rev = "e01c5b01e2c0d647b40453f01353eef29c4db691" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
